# mmpycorex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_pypi.yaml
src/mmpycorex/: __init__.py  _version.py  core.py  headless.py  install.py  launcher.py  main.py  test.py
test/: buffer_speed_tests.ipynb  buffer_test_util.py  buffer_tests.ipynb  new_camera_api_tests.ipynb
