[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mmpycorex"
authors = [{name = "Henry Pinkard", email = "henry.pinkard.open.source@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pymmcore",
    "pyzmq"
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/micro-manager/mmpycorex"

# Specify the module directory within the project table
[tool.flit.module]
name = "src.mmpycorex"
